# ComfyUI-OpenPose

./: README.md  __init__.py  install.py  openpose_node.py  pyproject.toml  requirements.txt
example/: openpose.json
src/: torch_openpose.py  util.py
