[project]
name = "comfyui-openpose"
description = "This extension contains a custom node for ComfyUI. The node, called 'Bounding Box Crop', is designed to compute the top-left coordinates of a cropped bounding box based on input coordinates and dimensions of the final cropped image. It does so computing the center of the cropping area and then computing where the top-left coordinates would be."
version = "1.0.0"
license = "LICENSE"
dependencies = ["torch", "opencv-python", "numpy", "huggingface_hub", "torchvision"]

[project.urls]
Repository = "https://github.com/alessandrozonta/ComfyUI-OpenPose"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "alezonta"
DisplayName = "ComfyUI-OpenPose"
Icon = ""
